<resources>

    <!-- App Name -->
    <string name="app_name">GIVU</string>

    <!-- Common -->
    <string name="text_return">돌아가기</string>
    <string name="text_image_upload">이미지 업로드</string>
    <string name="message_image_limit">이미지는 최대 3장까지 업로드 가능합니다.</string>
    <string name="title_funding_category">어떤 날을 기념하고 싶나요?</string>
    <string name="title_funding_scope">공개 범위 설정</string>
    <string name="text_funding_scope">펀딩 공개 범위를 설정해주세요.</string>
    <string name="text_funding_public">누구나 펀딩을 볼 수 있고\n참여할 수 있어요.</string>
    <string name="text_funding_private">카카오톡 친구만 펀딩에\n참여할 수 있어요.</string>
    <string name="title_funding_description">친구들에게 남길 메시지를 입력해주세요. (최대 100자)</string>

    <!-- Menu -->
    <string name="menu_title_home">홈</string>
    <string name="menu_title_community">친구</string>
    <string name="menu_title_mall">마켓</string>
    <string name="menu_title_my_page">내 정보</string>

    <!-- Home -->
    <string name="label_home">Home</string>
    <string name="text_popular_funding">현재 인기 있는 펀딩</string>
    <string name="text_my_friends_funding">내 친구들의 펀딩</string>
    <string name="text_funding_list">펀딩 목록</string>
    <string name="text_search_keyword_need">검색어를 입력하세요</string>
    <string name="message_auto_login_fail">자동 로그인에 실패하였습니다.</string>

    <!-- Login -->
    <string name="text_login_description">간편하게 로그인하고\n특별한 날에\n펀딩을 통해 선물을 받아보세요</string>

    <!-- Community -->
    <string name="label_community">Community</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_friend_list">내 친구 목록</string>
    <string name="title_recently_funding">최근 활동이 이루어진 펀딩</string>
    <string name="title_friend_participate_funding">친구들이 참여한 펀딩</string>
    <string name="title_friend_register_funding">친구들이 생성한 펀딩</string>

    <!-- Mall -->
    <string name="label_mall">Mall</string>

    <!-- My Page -->
    <string name="label_my_page">My Page</string>
    <string name="message_logout_success">로그아웃에 성공했습니다.</string>
    <string name="title_charge_account">GIVU Pay 충전하기</string>
    <string name="text_charge_account">충전하기</string>
    <string name="message_charge_account_success">충전에 성공했습니다.</string>
    <string name="message_charge_account_fail">충전에 실패했습니다.</string>
    <string name="title_deposit_account">GIVU Pay 출금하기</string>
    <string name="text_deposit_account">출금하기</string>
    <string name="message_deposit_account_success">출금에 성공했습니다.</string>
    <string name="message_deposit_account_fail">출금에 실패했습니다.</string>

    <!-- Search -->
    <string name="label_search">Search</string>
    <string name="title_empty_result">검색 결과가 없습니다.</string>

    <!-- Register -->
    <string name="title_register_image_upload">대표 이미지 업로드</string>
    <string name="text_register_image_upload">펀딩을 대표하는 이미지를 업로드해주세요.</string>
    <string name="message_register_success">펀딩을 생성했습니다.</string>
    <string name="message_register_fail">펀딩 생성에 실패했습니다.</string>

    <!-- Detail -->
    <string name="label_detail_funding">Detail Funding</string>
    <string name="text_funding_finish">펀딩 완료하기</string>
    <string name="text_funding_update">펀딩 수정</string>
    <string name="text_funding_cancel">펀딩 취소</string>
    <string name="message_delete_letter_success">축하 편지를 삭제했습니다.</string>
    <string name="message_delete_letter_fail">축하 편지 삭제에 실패했습니다.</string>

    <!-- Participate -->
    <string name="label_participate_funding">Participate Funding</string>
    <string name="title_participate_funding">펀딩 참여하기</string>
    <string name="message_participate_funding_success">펀딩에 참여했습니다.</string>
    <string name="message_participate_funding_fail">펀딩 참여에 실패했습니다.</string>
    <string name="message_transfer_success">결제에 성공했습니다.</string>
    <string name="message_transfer_fail">결제에 실패했습니다.</string>

    <!-- Write Letter -->
    <string name="label_write_letter">Write Letter</string>
    <string name="title_write_letter">축하 편지 남기기</string>
    <string name="text_write_letter">메시지 남기기</string>
    <string name="text_hint_write_letter">축하 메시지를 입력해주세요</string>

    <!-- Complete Funding -->
    <string name="label_complete_funding">Complete Funding</string>
    <string name="title_complete_funding">펀딩 참여 완료</string>
    <string name="text_complete_funding">펀딩에 참여했습니다.</string>

    <!-- Update Funding -->
    <string name="label_update_funding">Update Funding</string>
    <string name="title_update_funding">펀딩 수정하기</string>
    <string name="text_update_funding">수정하기</string>
    <string name="message_update_funding_success">펀딩을 수정했습니다.</string>
    <string name="message_update_funding_fail">펀딩 수정에 실패했습니다.</string>

    <!-- Cancel Funding -->
    <string name="label_cancel_funding">Cancel Funding</string>
    <string name="label_finish_cancel_funding">Finish Cancel Funding</string>
    <string name="title_cancel_funding">펀딩 취소하기</string>
    <string name="title_finish_cancel_funding">펀딩 취소 완료</string>
    <string name="title_recommend_other_funding">잠깐,\n이 선물은 어떠세요?</string>
    <string name="text_recommend_other_funding">금액에 맞는 다른 선물을 추천해드립니다.</string>
    <string name="title_confirm_cancel_funding">펀딩 취소 전\n다음 사항을 확인해주세요.</string>
    <string name="text_confirm_cancel_funding">펀딩이 종료된 이후에도 선물 전달 완료일로부터 7일 이내에 후원자가 환불을 신청할 수 있습니다.\n
        1. 펀딩 금액이 목표 금액의 50% 이하인 경우, 사용자가 펀딩을 취소하면 해당 펀딩은 취소 처리됩니다.\n
        2. 펀딩 금액이 목표 금액의 50% 초과 ~ 100% 미만인 경우, 사용자가 펀딩을 취소하면 해당 펀딩은 완료 처리됩니다.\n
         · 사용자에게는 현재까지 모인 금액이 기뷰페이(GIVU Pay)로 환급됩니다.\n
        3. 펀딩 금액이 목표 금액의 100%를 달성한 경우, 펀딩은 성공적으로 완료 처리되며, 환급 없이 상품 구매 프로세스가 진행됩니다.</string>
    <string name="text_givu_pay_password">기뷰페이 비밀번호 입력</string>
    <string name="text_question_cancel_funding">정말 해당 펀딩을 취소하시겠습니까?</string>
    <string name="text_cancel_funding">펀딩 취소</string>
    <string name="text_finish_cancel_funding">펀딩이 취소되었어요.</string>
    <string name="message_cancel_funding_fail">펀딩 취소에 실패했습니다.</string>

    <!-- Finish Funding -->
    <string name="label_finish_funding">Finish Funding</string>
    <string name="label_funding_finished">Funding Finished</string>
    <string name="title_finish_funding">펀딩 완료하기</string>
    <string name="title_finish_funding_review">펀딩 후기 작성</string>
    <string name="text_hint_finish_funding_review">펀딩 후기 작성하기</string>
    <string name="title_finish_funding_image_add">이미지 추가하기</string>
    <string name="title_finish_funding_participate">펀딩에 참여하신 분들</string>
    <string name="title_authentication">본인 인증하기</string>
    <string name="title_funding_finished">펀딩을 성공적으로 종료했어요.</string>
    <string name="text_funding_confirm">펀딩 확인하기</string>

</resources>