<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_home"
        android:enabled="true"
        android:icon="@drawable/selector_home"
        android:title="@string/menu_title_home" />

    <item
        android:id="@+id/fragment_community"
        android:enabled="true"
        android:icon="@drawable/selector_community"
        android:title="@string/menu_title_community" />

    <item
        android:id="@+id/fragment_mall"
        android:enabled="true"
        android:icon="@drawable/selector_mall"
        android:title="@string/menu_title_mall" />

    <item
        android:id="@+id/fragment_my_page"
        android:enabled="true"
        android:icon="@drawable/selector_my_page"
        android:title="@string/menu_title_my_page" />

</menu>